graph, file_reader, and separator
Initial commit for graph, file_reader, and separator classes.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,18 @@
 *.slo
 *.lo
 *.o
+*.exe
+
+# VIM
+*.swp
+
+# Code::Blocks
+*.stackdump
+*.depend
+*.layout*
+
+# Dirs
+graphfiles/*
 
 # Compiled Dynamic libraries
 *.so
