More Unit Tests!
1. Vertices now has a (non-explicit) initializer_list constructor.
2. Re-wrote sal_fr_test as graph_test.cpp

--- a/ChordAlgSrc/CMakeLists.txt
+++ b/ChordAlgSrc/CMakeLists.txt
@@ -1,17 +1,17 @@
 add_library(ChordAlg
-                classic_elimination.cpp
-                elimination_order.cpp
+#                classic_elimination.cpp
+#                elimination_order.cpp
                 file_reader.cpp
                 graph.cpp
                 graph_file.cpp
                 intersection_graph.cpp
-                lb_elimination.cpp
+#                lb_elimination.cpp
                 lex_trie.cpp
-                mcs.cpp
-                minimal_separator_algorithms.cpp
-                mixed_elimination.cpp
-                separator.cpp
-                tree_representation.cpp
+#                mcs.cpp
+#                minimal_separator_algorithms.cpp
+#                mixed_elimination.cpp
+#                separator.cpp
+#                tree_representation.cpp
                 vertex_utilities.cpp)
 
 add_subdirectory(unit_tests)
