--- a/ChordAlgSrc/unit_tests/CMakeLists.txt
+++ b/ChordAlgSrc/unit_tests/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 
-add_gmock_test(FileReaderTest file_reader_test.cpp)
-target_link_libraries(FileReaderTest ChordAlg)
+add_gmock_test(ChordAlgUnitTests file_reader_test.cpp
+                                 graph_test.cpp)
+target_link_libraries(ChordAlgUnitTests ChordAlg)
 
