LexTrie Unit Test

--- a/ChordAlgSrc/unit_tests/CMakeLists.txt
+++ b/ChordAlgSrc/unit_tests/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 
 add_gmock_test(ChordAlgUnitTests file_reader_test.cpp
-                                 graph_test.cpp)
+                                 graph_test.cpp
+                                 lex_trie_test.cpp)
 target_link_libraries(ChordAlgUnitTests ChordAlg)
 
