--- a/ChordAlgSrc/unit_tests/CMakeLists.txt
+++ b/ChordAlgSrc/unit_tests/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 
-add_gmock_test(ChordAlgUnitTests file_reader_test.cpp
+add_gmock_test(ChordAlgUnitTests file_reader_graph_integration_test.cpp
+                                 file_reader_test.cpp
                                  graph_test.cpp
-                                 lex_trie_test.cpp)
+                                 lex_trie_test.cpp
+                                 vertices_test.cpp)
 target_link_libraries(ChordAlgUnitTests ChordAlg)
 
