--- a/ChordAlgSrc/tests/CMakeLists.txt
+++ b/ChordAlgSrc/tests/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 
-add_gmock_test(ChordAlgUnitTests file_reader_graph_integration_test.cpp
-                                 file_reader_test.cpp
-                                 graph_test.cpp
-                                 lex_trie_test.cpp
-                                 vertices_test.cpp)
+add_gmock_test(ChordAlgUnitTests file_reader_graph_integration_tests.cpp
+                                 file_reader_unit_tests.cpp
+                                 graph_unit_tests.cpp
+                                 lex_trie_unit_tests.cpp
+                                 test_graphs.cpp
+                                 vertices_unit_tests.cpp)
 target_link_libraries(ChordAlgUnitTests ChordAlg)
 
