AtomsTest & Various clean-up
1) AtomsTest Framework
2) Atoms unit tests
3) (brittle) Atoms integration test

--- a/ChordAlgSrc/tests/CMakeLists.txt
+++ b/ChordAlgSrc/tests/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 
-add_gmock_test(ChordAlgUnitTests file_reader_graph_integration_tests.cpp
+add_gmock_test(ChordAlgUnitTests atoms_graph_integration_tests.cpp
+                                 atoms_unit_tests.cpp
+                                 file_reader_graph_integration_tests.cpp
                                  file_reader_unit_tests.cpp
                                  graph_unit_tests.cpp
                                  lex_trie_unit_tests.cpp
