Atoms and MCS_M+
1) atom_subgraphs.hpp removed (no need for templates here)
2) added Atoms class, atoms.h atoms.cpp
3) MCSmPlus separate from Atoms

--- a/ChordAlgSrc/CMakeLists.txt
+++ b/ChordAlgSrc/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(ChordAlg
+                atoms.cpp
                 classic_elimination.cpp
                 elimination_order.cpp
                 file_reader.cpp
@@ -8,6 +9,7 @@ add_library(ChordAlg
                 lb_elimination.cpp
                 lex_trie.cpp
                 mcs.cpp
+                mcs_m.cpp
                 minimal_separator_algorithms.cpp
                 mixed_elimination.cpp
                 separator.cpp
