--- a/executables/CMakeLists.txt
+++ b/executables/CMakeLists.txt
@@ -1,18 +1,18 @@
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 
-add_executable(Atoms Atoms.cxx)
-target_link_libraries(Atoms ChordAlgLib)
-add_executable(CellIntersectionGraph CellIntersectionGraph.cxx)
-target_link_libraries(CellIntersectionGraph ChordAlgLib)
-add_executable(Composite_heuristic Composite_heuristic.cxx)
-target_link_libraries(Composite_heuristic ChordAlgLib)
-add_executable(Mixed_heuristic Mixed_heuristic.cxx)
-target_link_libraries(Mixed_heuristic ChordAlgLib)
-add_executable(MMC_heuristic MMC_heuristic.cxx)
-target_link_libraries(MMC_heuristic ChordAlgLib)
-add_executable(MMC_MaxCompatSupertree MMC_MaxCompatSupertree.cxx)
-target_link_libraries(MMC_MaxCompatSupertree ChordAlgLib)
-add_executable(PDRS_ratio_heuristic PDRS_ratio_heuristic.cxx)
-target_link_libraries(PDRS_ratio_heuristic ChordAlgLib)
-add_executable(PDRS_wsum_heuristic PDRS_wsum_heuristic.cxx)
-target_link_libraries(PDRS_wsum_heuristic ChordAlgLib)
+function(add_chordalg_executable arg1)
+    add_executable(${arg1} ${arg1}.cxx)
+    target_link_libraries(${arg1} ChordAlgLib)
+endfunction()
+
+add_chordalg_executable(Atoms)
+add_chordalg_executable(AtomsExperiment)
+add_chordalg_executable(AtomSeparatorGraphExperiment)
+add_chordalg_executable(CellIntersectionGraph)
+add_chordalg_executable(Composite_heuristic)
+add_chordalg_executable(Mixed_heuristic)
+add_chordalg_executable(MMC_heuristic)
+add_chordalg_executable(MMC_MaxCompatSupertree)
+add_chordalg_executable(PDRS_ratio_heuristic)
+add_chordalg_executable(PDRS_wsum_heuristic)
+add_chordalg_executable(SeparatorGraphExperiment)
