Triangulation, MCS_triangulation, Atoms bug
1) Triangulation class added
2) MCS_triangulation executable added
3) Fixed Atoms bug related to heuristics: FillCost was called on Graph, not InducedSubgraph, resulting in charging per fill edge added (instead of # of colors in common)
4) integration test for MCS, Triangulation, ELiminationOrder
5) Graph neighbors accessor (useful for constructing supergraphs / triangulations)
6) executables clean-up: cerr & EXIT_SUCCESS / EXIT_FAILURE

--- a/ChordAlgSrc/CMakeLists.txt
+++ b/ChordAlgSrc/CMakeLists.txt
@@ -13,6 +13,7 @@ add_library(ChordAlgLib
                 separator.cpp
                 separator_graph.cpp
                 tree_representation.cpp
+                triangulation.cpp
                 vertices.cpp)
 
 add_subdirectory(tests)
