--- a/executables/CMakeLists.txt
+++ b/executables/CMakeLists.txt
@@ -10,6 +10,7 @@ add_chordalg_executable(AtomsExperiment)
 add_chordalg_executable(AtomSeparatorGraphExperiment)
 add_chordalg_executable(CellIntersectionGraph)
 add_chordalg_executable(Composite_heuristic)
+add_chordalg_executable(MCS_triangulation)
 add_chordalg_executable(Mixed_heuristic)
 add_chordalg_executable(MMC_heuristic)
 add_chordalg_executable(MMC_MaxCompatSupertree)
