--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,8 @@ endif()
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 add_subdirectory(ChordAlgSrc)
 add_subdirectory(executables)
+add_subdirectory(heuristics_experiments)
+add_subdirectory(separatorgraph_experiments)
 
 set(CONFIGURED_ONCE TRUE CACHE INTERNAL
     "A flag showing that CMake has configured at least once.")
