--- a/executables/CMakeLists.txt
+++ b/executables/CMakeLists.txt
@@ -6,14 +6,6 @@ function(add_chordalg_executable arg1)
 endfunction()
 
 add_chordalg_executable(Atoms)
-add_chordalg_executable(AtomsExperiment)
-add_chordalg_executable(AtomSeparatorGraphExperiment)
 add_chordalg_executable(CellIntersectionGraph)
-add_chordalg_executable(Composite_heuristic)
 add_chordalg_executable(MCS_triangulation)
-add_chordalg_executable(Mixed_heuristic)
-add_chordalg_executable(MMC_heuristic)
-add_chordalg_executable(MMC_MaxCompatSupertree)
-add_chordalg_executable(PDRS_ratio_heuristic)
-add_chordalg_executable(PDRS_wsum_heuristic)
-add_chordalg_executable(SeparatorGraphExperiment)
+add_chordalg_executable(MaxCompatSupertree)
