Heuristics Update (sans Composite)
1) command line parsing in heuristic_options
2) heuristic_runs class
3) EliminationParameters class (absorbed EliminationCriterion & Subclasses)
4) `Cost' type removed, replaced with `Weight'

--- a/executables/CMakeLists.txt
+++ b/executables/CMakeLists.txt
@@ -8,4 +8,4 @@ endfunction()
 add_chordalg_executable(Atoms)
 add_chordalg_executable(CellIntersectionGraph)
 add_chordalg_executable(MCS_triangulation)
-add_chordalg_executable(MaxCompatSupertree)
+#add_chordalg_executable(MaxCompatSupertree)
