Heuristics (Ready for experiments)
1) EliminationMode enum class
2) Subclasses of ELiminationAlgorithm folded back into EliminationAlgorithm. Logic controled by EliminationMode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,13 +10,15 @@ include(gmock)
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" OR
     "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
     set(warnings "-Wall -Wextra -Werror")
+    set(debug_flags "-g")
+    set(opt_flags "-O3")
 endif()
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
     set(cxx_std "-std=c++11")
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
     set(cxx_std "-std=c++11")
 endif()
-set(cxx_flags "${warnings} ${cxx_std}")
+set(cxx_flags "${debug_flags} ${warnings} ${cxx_std}")
 if (NOT CONFIGURED_ONCE)
     set(CMAKE_CXX_FLAGS "${cxx_flags}"
         CACHE STRING "Flags used by the compiler during all build types." FORCE)
