Moved heuristic_run to ChordAlgSrc

--- a/ChordAlgSrc/CMakeLists.txt
+++ b/ChordAlgSrc/CMakeLists.txt
@@ -3,9 +3,9 @@ add_library(ChordAlgLib
                 elimination_algorithm.cpp
                 elimination_order.cpp
                 file_reader.cpp
-                fill_edges.cpp
                 graph.cpp
                 graph_file.cpp
+                heuristic_run.cpp
                 intersection_graph.cpp
                 lex_trie.cpp
                 mcs.cpp
