--- a/ChordAlgSrc/tests/CMakeLists.txt
+++ b/ChordAlgSrc/tests/CMakeLists.txt
@@ -4,6 +4,7 @@ add_gmock_test(ChordAlgUnitTests atoms_graph_integration_tests.cpp
                                  file_reader_graph_integration_tests.cpp
                                  file_reader_unit_tests.cpp
                                  graph_unit_tests.cpp
+                                 heuristic_run_integration_tests.cpp
                                  lex_trie_unit_tests.cpp
                                  mcs_triangulation_integration_tests.cpp
                                  minimal_separator_algorithms_integration_tests.cpp
