Heuristics Sanity Checks

--- a/heuristics_experiments/CMakeLists.txt
+++ b/heuristics_experiments/CMakeLists.txt
@@ -13,3 +13,4 @@ add_heuristic_experiment(Mixed_heuristic)
 add_heuristic_experiment(MMC_heuristic)
 add_heuristic_experiment(PDRS_ratio_heuristic)
 add_heuristic_experiment(PDRS_wsum_heuristic)
+add_heuristic_experiment(sanity_check)
