Partition Intersection Graph
1) file_reader
    a) added CharacterIntGraphFR, subclasses PartitionIntGraphFR, CellIntGraphFR
    b) CharacterIntGraphFR ReadFileOrDie consists of three stages
        i) Parse matrix
        ii) Tie subsets to vertices (pig this is bijective, cig not)
        iii) Compute graph data from subsets
2) intersection_graph
    a) added CharacterIntersectionGraph, subclasses PartitionIntersectionGraph, CellIntersectionGraph
3) separatorgraph_experiments added

--- a/separatorgraph_experiments/CMakeLists.txt
+++ b/separatorgraph_experiments/CMakeLists.txt
@@ -5,6 +5,9 @@ function(add_separatorgraph_experiment arg1)
     target_link_libraries(${arg1} ChordAlgLib)
 endfunction()
 
-add_separatorgraph_experiment(AtomsExperiment)
-add_separatorgraph_experiment(AtomSeparatorGraphExperiment)
-add_separatorgraph_experiment(SeparatorGraphExperiment)
+add_separatorgraph_experiment(AtomsExperimentCIG)
+add_separatorgraph_experiment(AtomsExperimentPIG)
+add_separatorgraph_experiment(AtomSeparatorGraphExperimentCIG)
+add_separatorgraph_experiment(AtomSeparatorGraphExperimentPIG)
+add_separatorgraph_experiment(SeparatorGraphExperimentCIG)
+add_separatorgraph_experiment(SeparatorGraphExperimentPIG)
