FileReader / GraphFile re-write
1) GraphFile detects file type
2) FileReader is now GraphFR
3) GraphFR -> CharacterIntGraphFR (abstract) -> CellIntGraphFR
                                             -> PartitionIntGraphFR
4) chordalg_string (mainly for Split, using strtok)
5) test_graphs changed to reflect parsing
6) FileReader tests updated to reflect changes

--- a/ChordAlgSrc/CMakeLists.txt
+++ b/ChordAlgSrc/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(ChordAlgLib
                 atoms.cpp
+                chordalg_string.cpp
                 elimination_algorithm.cpp
                 elimination_order.cpp
                 file_reader.cpp
