--- a/executables/CMakeLists.txt
+++ b/executables/CMakeLists.txt
@@ -9,3 +9,4 @@ add_chordalg_executable(Atoms)
 add_chordalg_executable(CellIntersectionGraph)
 add_chordalg_executable(MCS_triangulation)
 #add_chordalg_executable(MaxCompatSupertree)
+add_chordalg_executable(PartitionIntersectionGraph)
