--- a/ChordAlgSrc/CMakeLists.txt
+++ b/ChordAlgSrc/CMakeLists.txt
@@ -4,6 +4,7 @@ add_library(ChordAlgLib
                 elimination_algorithm.cpp
                 elimination_order.cpp
                 file_reader.cpp
+                fill_edges.cpp
                 graph.cpp
                 graph_file.cpp
                 heuristic_run.cpp
