--- a/ChordAlgSrc/tests/CMakeLists.txt
+++ b/ChordAlgSrc/tests/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 
 add_gmock_test(ChordAlgUnitTests atoms_graph_integration_tests.cpp
+                                 elimination_order_graph_integration_tests.cpp
                                  file_reader_graph_integration_tests.cpp
+                                 fill_edge_graph_integration_tests.cpp
                                  graph_unit_tests.cpp
                                  heuristic_run_integration_tests.cpp
                                  lex_trie_unit_tests.cpp
