MCS_M uses FillEdges
1) Return-value parameters are now pointers

2) FillEdges used

3) MCSmPlus results in minimal triangulation tests

--- a/ChordAlgSrc/tests/CMakeLists.txt
+++ b/ChordAlgSrc/tests/CMakeLists.txt
@@ -8,6 +8,7 @@ add_gmock_test(ChordAlgTests atoms_graph_integration_tests.cpp
                              heuristic_run_integration_tests.cpp
                              lex_trie_unit_tests.cpp
                              mcs_triangulation_integration_tests.cpp
+                             mcs_m_triangulation_integration_tests.cpp
                              minimal_separator_algorithms_integration_tests.cpp
                              separator_components_integration_tests.cpp
                              separator_graph_integration_tests.cpp
