--- a/executables/CMakeLists.txt
+++ b/executables/CMakeLists.txt
@@ -11,3 +11,4 @@ add_chordalg_executable(ChordalGraph)
 add_chordalg_executable(MCS_triangulation)
 #add_chordalg_executable(MaxCompatSupertree)
 add_chordalg_executable(PartitionIntersectionGraph)
+add_chordalg_executable(PerfectEliminationOrdering)
