--- a/executables/CMakeLists.txt
+++ b/executables/CMakeLists.txt
@@ -9,6 +9,7 @@ add_chordalg_executable(Atoms)
 add_chordalg_executable(CellIntersectionGraph)
 add_chordalg_executable(ChordalGraph)
 add_chordalg_executable(DOTFormat)
+add_chordalg_executable(GMLFormat)
 add_chordalg_executable(MCS_triangulation)
 #add_chordalg_executable(MaxCompatSupertree)
 add_chordalg_executable(PartitionIntersectionGraph)
