--- a/executables/CMakeLists.txt
+++ b/executables/CMakeLists.txt
@@ -19,6 +19,7 @@ add_chordalg_executable(LBTriang)
 add_chordalg_executable(MCS)
 add_chordalg_executable(MinimalTriangulation)
 add_chordalg_executable(PerfectEliminationOrder)
+add_chordalg_executable(SeparatorGraph)
 
 # Graph Computations
 add_chordalg_executable(Atoms)
