Potential Maximal Cliques
1) Potential Maxclique generation
    a) PotentialMaxclique::Generate(const Graph& G)
    b) G must be connected

2) PotentialMaxcliques executable
    Computes atom subgraphs, then PMC's on atom subgraphs

3) InducedSubgraph constructor takes VertexSet now
    Gaurantees sorted construction, no longer callee responsibility

4) InducedSubgraph::New(const Graph*, const Vertices&)
    Creates VertexSet and calls constructor

5) Atoms vertices_of_atoms std::list< Vertices > -> std::list< VertexSet* >

6) SanityChecks
    a) separator_graph and potential_maxcliques sanity checks added
    b) known bug: potential_maxcliques crashes on disconnected graphs
        i) passed checks on 29 other graphs
        ii) not an issue for executable

7) LexTrie Insert/Contains parameter: const vector* -> const vector&

--- a/executables/CMakeLists.txt
+++ b/executables/CMakeLists.txt
@@ -20,6 +20,7 @@ add_chordalg_executable(LBTriang)
 add_chordalg_executable(MCS)
 add_chordalg_executable(MinimalTriangulation)
 add_chordalg_executable(PerfectEliminationOrder)
+add_chordalg_executable(PotentialMaxcliques)
 add_chordalg_executable(SeparatorGraph)
 
 # Graph Computations
