BTAlgorithm / Treewidth / Minimum fill
1) Implemented potential maximal clique minimal triangulation dynamic programming algorithms:
    i) Clique type (Treewidth)
    ii) Fill type (WeightedMinimumFill)

2) sanity_checks/graphs: example graph files and script to run sanity checks

--- a/ChordAlgSrc/CMakeLists.txt
+++ b/ChordAlgSrc/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(ChordAlgLib
                 atoms.cpp
+                bt_algorithm.cpp
                 chordalg_string.cpp
                 elimination.cpp
                 elimination_heuristic.cpp
